# Fashionpedia

./: CONFIG.md  README.md  app.py  config.py  full_pipeline.py  inference.py  model.py  preprocessing.py  pyproject.toml  requirements.txt  utils.py
static/: index.html  script.js  style.css
